[package]
name = "revel"
description= ""
authors = ["guimy <guimingyue@gmail.com>"]
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "revel"
path = "src/lib.rs"

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
