[package]
name = "revel"
description= ""
authors = ["guimy <guimingyue@gmail.com>"]
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "revel"
path = "src/lib.rs"

[dependencies]
rand="0.8.5"
crc="3.0.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
